--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "a graphql apollo api",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node ./src/index.js",
     "test": "test",
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow"
@@ -30,6 +31,15 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "flow-bin": "^0.65.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "nodemon": "^1.14.12"
+  },
+  "dependencies": {
+    "apollo-server-express": "^1.3.2",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "graphql": "^0.13.0",
+    "graphql-tools": "^2.20.1",
+    "mongoose": "^5.0.3"
   }
 }
