--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-inline-import": "^2.0.6",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
@@ -31,8 +32,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.6.1",
     "flow-bin": "^0.65.0",
-    "prettier": "^1.10.2",
-    "nodemon": "^1.14.12"
+    "nodemon": "^1.14.12",
+    "prettier": "^1.10.2"
   },
   "dependencies": {
     "apollo-server-express": "^1.3.2",
