--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "a graphql apollo api",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node ./src/index.js",
+    "prestart": "./node_modules/.bin/babel-node ./build.js",
+    "start": "./node_modules/.bin/nodemon --exec ./node_modules/.bin/babel-node ./src/server.js",
     "test": "test",
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow"
@@ -17,6 +18,7 @@
   "license": "GNU",
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-inline-import": "^2.0.6",
     "babel-preset-env": "^1.6.1",
@@ -39,6 +41,7 @@
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "glob": "^7.1.2",
     "graphql": "^0.13.0",
     "graphql-tools": "^2.20.1",
     "mongoose": "^5.0.3"
