--- a/_app_/.eslintrc
+++ b/_app_/.eslintrc
@@ -31,7 +31,17 @@
         }
     },
     "rules": {
-        "prettier/prettier": 2,
+        "prettier/prettier": [
+            "error",
+            {
+                "singleQuote": true,
+                "trailingComma": "all"
+            }
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
         "no-console": 2,
         "no-case-declarations": 0,
         "arrow-body-style": 2,
@@ -84,7 +94,7 @@
         ],
         "flowtype/no-primitive-constructor-types": 2,
         "flowtype/no-types-missing-file-annotation": 2,
-        "flowtype/no-weak-types": 2,
+        "flowtype/no-weak-types": 0,
         "flowtype/object-type-delimiter": [
             2,
             "comma"
