--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,7 @@
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow",
     "build": "./node_modules/.bin/webpack",
-    "start": "./node_modules/.bin/babel-node dev-server.js"
+    "start": "NODE_ENV=development ./node_modules/.bin/babel-node dev-server.js"
   },
   "author": "Michael Lückgen",
   "license": "GNU",
