--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,9 @@
     "test": "test",
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow",
-    "build": "./node_modules/.bin/webpack",
-    "start": "NODE_ENV=development ./node_modules/.bin/babel-node dev-server.js"
+    "build": "./node_modules/.bin/webpack --config webpack.production.config.js",
+    "start": "NODE_ENV=development ./node_modules/.bin/babel-node dev-server.js",
+    "start-production": "NODE_ENV=production ./node_modules/.bin/babel-node server.js"
   },
   "author": "Michael Lückgen",
   "license": "GNU",
@@ -43,6 +44,7 @@
     "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.7",
     "prettier": "^1.10.2",
+    "pug-html-loader": "^1.1.5",
     "style-loader": "^0.20.2",
     "svg-sprite-loader": "^3.6.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
@@ -50,6 +52,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
