--- a/app/package.json
+++ b/app/package.json
@@ -4,12 +4,13 @@
   "description": "an apollo redux frontend app",
   "main": "index.js",
   "scripts": {
+    "setup": "node ./scripts/setup.js",
     "test": "test",
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow",
     "build": "./node_modules/.bin/webpack --config webpack.production.config.js",
-    "start": "NODE_ENV=development ./node_modules/.bin/babel-node dev-server.js",
-    "start-production": "NODE_ENV=production ./node_modules/.bin/babel-node server.js"
+    "start": "./node_modules/.bin/babel-node dev-server.js",
+    "start-production": "./node_modules/.bin/babel-node server.js"
   },
   "author": "Michael Lückgen",
   "license": "GNU",
@@ -31,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.9",
+    "dotenv-webpack": "^1.5.4",
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
