--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "dotenv": "^5.0.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
