--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,8 @@
     "lint": "./node_modules/.bin/eslint ./src",
     "flow": "./node_modules/.bin/flow",
     "build": "./node_modules/.bin/webpack --config webpack.production.config.js",
-    "start": "./node_modules/.bin/babel-node dev-server.js",
-    "start-production": "./node_modules/.bin/babel-node server.js"
+    "start": "./node_modules/.bin/babel-node ./server/dev-server.js",
+    "start-production": "./node_modules/.bin/babel-node --plugins dynamic-import-node ./server/server.js"
   },
   "author": "Michael Lückgen",
   "license": "GNU",
@@ -26,6 +26,8 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
@@ -43,15 +45,15 @@
     "eslint-plugin-react": "^7.6.1",
     "flow-bin": "^0.66.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
     "json-loader": "^0.5.7",
     "prettier": "^1.10.2",
     "pug-html-loader": "^1.1.5",
     "style-loader": "^0.20.2",
     "svg-sprite-loader": "^3.6.2",
-    "uglifyjs-webpack-plugin": "^1.2.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9",
+    "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
     "dotenv": "^5.0.0",
@@ -59,9 +61,11 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.1.6"
   }
 }
