--- a/api/package.json
+++ b/api/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "glob": "^7.1.2",
     "graphql": "^0.13.0",
