--- a/app/package.json
+++ b/app/package.json
@@ -14,14 +14,6 @@
   },
   "author": "Michael Lückgen",
   "license": "GNU",
-  "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 ChromeAndroid versions",
-    "last 2 Edge versions",
-    "last 2 Firefox versions",
-    "last 2 iOS versions",
-    "last 2 Safari versions"
-  ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -57,7 +49,14 @@
     "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.1.9",
+    "apollo-client": "^2.2.5",
+    "apollo-link-http": "^1.5.2",
     "dotenv": "^5.0.0",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
+    "lodash": "^4.17.5",
+    "node-fetch": "^2.0.0",
     "pug": "^2.0.0-rc.4",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
@@ -66,7 +65,6 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
     "styled-components": "^3.1.6"
   }
 }
