--- a/app/package.json
+++ b/app/package.json
@@ -58,6 +58,7 @@
     "apollo-link-http": "^1.5.2",
     "compression": "^1.7.2",
     "dotenv": "^5.0.0",
+    "express": "^4.16.2",
     "graphql": "^0.13.1",
     "graphql-tag": "^2.8.0",
     "lodash": "^4.17.5",
